DONE:      1. Connect signals to make status of swap reflected in AtomicSwap dialog      2. Add informational tabs to AtomicSwap dialog TODO:      3. Add cancel and refund functionality to AtomicSwap when things go wrong, possibly add automatic cancel functionality      4. Add History and recovery to atomic window

--- a/src/plugins/atomic/AtomicSwap.ui
+++ b/src/plugins/atomic/AtomicSwap.ui
@@ -96,6 +96,16 @@
             </widget>
            </item>
            <item>
+            <widget class="QLabel" name="btc_hint">
+             <property name="pixmap">
+              <pixmap>hint-icon.png</pixmap>
+             </property>
+             <property name="textFormat">
+              <enum>Qt::TextFormat::PlainText</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QLabel" name="label_xmr">
              <property name="text">
               <string>XMR :</string>
