DONE:      1. Connect signals to make status of swap reflected in AtomicSwap dialog      2. Add informational tabs to AtomicSwap dialog      4. Add recovery to atomic widget TODO:      3. Add cancel and refund functionality to AtomicSwap when things go wrong      4. Refactor AtomicWidget so AtomicSwap handles parsing of swap binary output.

--- a/src/plugins/atomic/AtomicSwap.ui
+++ b/src/plugins/atomic/AtomicSwap.ui
@@ -37,7 +37,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="btn_cancel">
         <property name="text">
          <string>Cancel </string>
         </property>
