Minor Refactoring and addition of behind the scene changes to swap settings based on feather configuration. Atomic will no longer appear if feather is launched in testnet mode. DONE:      1. Connect signals to make status of swap reflected in AtomicSwap dialog      2. Add informational tabs to AtomicSwap dialog      4. Add recovery to atomic widget      5. Refactor AtomicWidget so AtomicSwap handles parsing of swap binary output. TODO:      3. Add cancel and refund functionality to AtomicSwap when things go wrong

--- a/src/plugins/atomic/AtomicRecoverDialog.ui
+++ b/src/plugins/atomic/AtomicRecoverDialog.ui
@@ -6,22 +6,71 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>903</width>
-    <height>248</height>
+    <width>936</width>
+    <height>256</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>AtomicRecoverDialog</string>
   </property>
-  <widget class="QTableView" name="swap_history">
+  <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>20</y>
-     <width>881</width>
-     <height>179</height>
+     <y>10</y>
+     <width>911</width>
+     <height>211</height>
     </rect>
    </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>There are one or more Atomic Swaps still pending, take action to prevent losing funds!</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QTableView" name="swap_history"/>
+    </item>
+    <item>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <spacer name="horizontalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Orientation::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QPushButton" name="btn_refund_resume">
+        <property name="text">
+         <string>Resume</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Orientation::Horizontal</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+     </layout>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
