--- a/src/SettingsDialog.ui
+++ b/src/SettingsDialog.ui
@@ -129,17 +129,17 @@
                 </item>
                </widget>
               </item>
-              <item row="5" column="0">
+              <item row="6" column="0">
                <widget class="QLabel" name="label_17">
                 <property name="text">
                  <string>Fiat currency:</string>
                 </property>
                </widget>
               </item>
-              <item row="5" column="1">
+              <item row="6" column="1">
                <widget class="QComboBox" name="comboBox_fiatCurrency"/>
               </item>
-              <item row="6" column="0">
+              <item row="7" column="0">
                <spacer name="verticalSpacer_3">
                 <property name="orientation">
                  <enum>Qt::Vertical</enum>
@@ -151,6 +151,13 @@
                  </size>
                 </property>
                </spacer>
+              </item>
+              <item row="5" column="1">
+               <widget class="QCheckBox" name="checkBox_balanceShowFiat">
+                <property name="text">
+                 <string>Show fiat balance in statusbar</string>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
