--- a/src/assets.qrc
+++ b/src/assets.qrc
@@ -88,6 +88,7 @@
     <file>assets/images/tab_contacts.png</file>
     <file>assets/images/tab_history.png</file>
     <file>assets/images/tab_home.png</file>
+    <file>assets/images/tab_notes.png</file>
     <file>assets/images/tab_party.png</file>
     <file>assets/images/tab_receive.png</file>
     <file>assets/images/tab_send.png</file>
